<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <string name="name">Name</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>

    <!-- Thank you message for the order summary [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="no_more_coffee">You cannot have more than 100 coffees</string>
    <string name="no_less_coffee">You cannot have less than 1 coffee</string>

    !--
    Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
    user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name" formatted="true">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%s</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%s</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
</resources>
